[package]
name = "spectrs"
version = "0.2.1"
edition = "2024"
authors = ["Giacomo Piccinini <giacomo.piccinini@proton.me>"]
license = "MIT"
description = "Fast spectrogram creation library"
readme = "README.md"
homepage = "https://github.com/giacomopiccinini/spectrs"
repository = "https://github.com/giacomopiccinini/spectrs"
keywords = ["spectrogram", "audio", "fft", "mel", "librosa"]

[lib]
name = "spectrs"
path = "src/lib.rs"

[features]
default = ["cli", "image"]
image = ["dep:image"]
cli = ["dep:clap", "dep:walkdir"]

[dependencies]
anyhow = "1.0.100"
hound = "3.5.1"
rayon = "1.11.0"
rubato = "0.16.2"
rustfft = "6.4.1"
image = { version = "0.25", optional = true }
clap = { version = "4.5.50", features = ["derive"], optional = true }
walkdir = { version = "2.5.0", optional = true }

[profile.release]
lto = true

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
serde_json = "1.0"

[[bin]]
name = "spectrs"
path = "src/main.rs"
required-features = ["cli"]
